--- a/Homepage.html
+++ b/Homepage.html
@@ -4,11 +4,12 @@
     <nav>
       <a href = '#' > Home | </a>
       <a href = '#' > About | </a>
-      <a href = '#' > Contact | </a>
+      <a href = '#' > Sponsors | </a>
     </nav>
     <h1>My Learning Git Homepage</h1>
     <p>This is the paragraph written for my UECS2363 first practical on Git and Github.</p>
     <p>simulating second commit</p>
     <p>simulating third commit</p>
+    <p>sponsor</p>
   </body>
 </html>
